# ProjektAlgorytmySortowania

./: CMakeLists.txt  DataHandler.h  Menu.h  ObslugaDanych.cpp  ObslugaDanych.h  ObslugaPliku.cpp  ObslugaPliku.h  README.md  ResultsLogger.cpp  ResultsLogger.h  SortingAlgorithms.cpp  SortingAlgorithms.h  Test.h  TestUtils.h  Timer.h  main.cpp
AlgorytmySortowania/: PrzezKopcowanie.cpp  PrzezKopcowanie.h  PrzezWstawianie.cpp  PrzezWstawianie.h  QuickSort.cpp  QuickSort.h  Shella.cpp  Shella.h
